@@ -136,6 +136,7 @@ Bug fixes:
 - PR#6727: Printf.sprintf "%F" misbehavior
   (Benoît Vaugon, report by Vassili Karpov)
 - PR#6763: #show with -short-paths doesn't select shortest type paths
+- PR#6768: Typechecker overflow the stack on cyclic type
 - ocamlbuild on cygwin cannot find ocamlfind
   (user 'algoriddle')
 - allow android build with pthreads support (since SDK r10c)
